[project]
name = "huggingface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.8"
dependencies = [
    "accelerate==1.12.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "filelock==3.20.3",
    "fsspec==2026.1.0",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.1",
    "packaging==25.0",
    "pillow==12.1.0",
    "psutil==7.2.1",
    "pyyaml==6.0.3",
    "regex==2026.1.15",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "sympy==1.14.0",
    "tokenizers==0.22.2",
    "torch==2.9.1",
    "torchvision==0.24.1",
    "tqdm==4.67.1",
    "transformers==4.57.6",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
